  * Changed:
    - COD::CIF::Data::AtomList:
      - oxidation state is now read from '_atom_type_oxidation_number'
        CIF data item, if available.
    - COD::CIF::Unicode2CIF:
      - mapped the capital sharp S ('ẞ') to the '\&S' CIF special code;
      - mapped the CIF special code for a delocalized double bond ('\\dbb ')
        to the '⎓' Unicode symbol.
  * Deprecated:
    - COD::ToolsVersion
      - the $COD::ToolsVersion::Version package variable.
  * Fixed:
    - cif_CODify:
      - corrected the usage example.
    - cif_diff:
      - numerically compared values with standard uncertainties are
        unpacked before the comparison.
    - cif_ddlm_dic_check:
      - updated the script to recognise and skip dictionary files that
        belong neither to the 'Reference' nor to the 'Instance' dictionary
        class;
      - corrected the handling of save frames that do not contain
        the _definition.id data item;
      - a typo in one of the output messages.
    - cif_Fcalc:
      - added an explicit result output order.
    - COD::CIF::Data::CIF2COD:
      - values 'inf', 'infinity' and 'nan' (and their capitalized
        variants) are no longer treated as numeric.

cod-tools (3.1.0)

  * Added:
    - COD::AtomNeighbours:
      - the neighbour_list_from_chemistry_opensmiles() subroutine;
      - the neighbour_list_from_cif() subroutine.
    - COD::CIF::Data::AtomList:
      - updated the atom property extraction logic to determine atom
        oxidation states from atom chemical types and atom names;
      - the 'exclude_hydrogens' option to the atom_array_from_cif()
        subroutine that excludes hydrogen atoms;
      - the get_atom_chemical_type() subroutine.
    - COD::CIF::Tags::Merge:
      - the 'tags' option to the merge_datablocks() subroutine to provide
        a list of data names to merge.
    - cif_filter:
      - distribution of '_publ_author_id_orcid' data item values from