@@ -1,1 +1,2 @@
-Tests the way other codes are encoded.
+Tests the way main Unicode characters that map to CIF special codes
+from the other codes grouping are encoded.
