@@ -1,0 +1,1 @@
+../inputs/utf8-to-cif/alternative-other-codes.cif
