@@ -1,0 +1,2 @@
+Tests the way alternative Unicode characters that map to CIF special codes
+from the other codes grouping are encoded.
