@@ -5,7 +5,6 @@ _symbol_cif_special_code
 _symbol_unicode_name
 _symbol_iucr_description
 &#x00B0; \% 'DEGREE SIGN' degree
-&#x2012; -- 'FIGURE DASH' dash
 &#x2013; -- 'EN DASH'     dash
 &#x2014; --- 'EM DASH'     'single bond'
 &#x003D; \\db  'EQUALS SIGN' 'double bond'
