@@ -1,0 +1,23 @@
+data_alternative_other_codes
+loop_
+_symbol_unicode_char
+_symbol_cif_special_code
+_symbol_unicode_hex_code
+_symbol_unicode_name
+_symbol_iucr_description
+# Dash
+– -- &#x2013; 'EN DASH' dash
+‒ -- &#x2012; 'FIGURE DASH' dash
+# Tilde
+∼ \\sim  &#x223C; 'TILDE OPERATOR' tilde
+˜ \\sim  &#x02DC; 'SMALL TILDE' tilde
+⁓ \\sim  &#x2053; 'SWUNG DASH' tilde
+～ \\sim  &#xFF5E; 'FULLWIDTH TILDE' tilde
+# Right angle bracket
+〉 \\rangle  &#x232A; 'RIGHT-POINTING ANGLE BRACKET' rangle
+〉 \\rangle  &#x3009; 'RIGHT ANGLE BRACKET' rangle
+⟩ \\rangle  &#x27E9; 'MATHEMATICAL RIGHT ANGLE BRACKET' rangle
+# Left angle bracket
+〈 \\langle  &#x2329; 'LEFT-POINTING ANGLE BRACKET' langle
+〈 \\langle  &#x3008; 'LEFT ANGLE BRACKET' langle
+⟨ \\langle  &#27E8; 'MATHEMATICAL LEFT ANGLE BRACKET' langle
