@@ -6,7 +6,6 @@ _symbol_unicode_hex_code
 _symbol_unicode_name
 _symbol_iucr_description
 ° \%            &#x00B0; 'DEGREE SIGN' 'degree (°)'
-‒ --            &#x2012; 'FIGURE DASH' dash
 ‒ --            &#x2013; 'EN DASH'     dash
 — ---           &#x2014; 'EM DASH'     'single bond'
 = \\db          &#x003D; 'EQUALS SIGN' 'double bond'
