@@ -5,8 +5,7 @@ _symbol_cif_special_code
 _symbol_unicode_name
 _symbol_iucr_description
 ° ° 'DEGREE SIGN' degree
-‒ ‒ 'FIGURE DASH' dash
-– ‒ 'EN DASH'     dash
+– – 'EN DASH'     dash
 — — 'EM DASH'     'single bond'
 = = 'EQUALS SIGN' 'double bond'
 ≡ ≡ 'IDENTICAL TO' 'triple bond' 
