@@ -179,10 +179,10 @@ _description.text
 ;
     Describes the severity of errors if such are detected in COD entries:
 
-    none ‒ means that the entry is clean and can be used with
+    none – means that the entry is clean and can be used with
             confidence; normally the tag with this value can be omitted;
 
-    warnings ‒ data or syntax have suspicious properties, or some
+    warnings – data or syntax have suspicious properties, or some
                 missing pieces of information, but the main data items (unit
                 cell, coordinates, chemical formula) should be mostly correct.
 
@@ -192,11 +192,11 @@ _description.text
                 that do not show an obviously incorrect structure; unusual bond
                 geometries, valencies, packing voids, etc.
 
-    errors ‒ the file has serious errors; the data are either wrong
+    errors – the file has serious errors; the data are either wrong
               or unusable due to dictionary non-conformace, obvious
               data errors, known experimental errors, missing tags.
 
-    retracted ‒ The original paper describing the structure, or the
+    retracted – The original paper describing the structure, or the
                  COD CIF file was retracted by authors.
 
 ;
