@@ -310,7 +310,7 @@ loop_
                                    #      .      |      .
    C1     1      .       .              #        .    |    .
    H11A   .5     M       A              #          .  |  .
-   H12A   .5     M       A              #             C1 &mdash;&mdash;&#x2012;C2&mdash;
+   H12A   .5     M       A              #             C1 &mdash;&mdash;&ndash;C2&mdash;
    H13A   .5     M       A              #           / .  \
    H11B   .5     M       B              #         /   .    \
    H12B   .5     M       B              #       /     .      \
@@ -7306,7 +7306,7 @@ _publ_manuscript_incl_extra_defn
 # Include Hydrogen Bonding Geometry Description
 # =============================================
 # Name                             explanation    standard?
-# &mdash;-                             &mdash;&mdash;&mdash;&#x2012;    &mdash;&mdash;&mdash;
+# &mdash;-                             &mdash;&mdash;&mdash;&ndash;    &mdash;&mdash;&mdash;
   &#39;_geom_hbond_atom_site_label_D&#39;  &#39;H-bond donor&#39;     yes
   &#39;_geom_hbond_atom_site_label_H&#39;  &#39;H-bond hydrogen&#39;  yes
   &#39;_geom_hbond_atom_site_label_A&#39;  &#39;H-bond acceptor&#39;  yes
@@ -7591,7 +7591,7 @@ The least-squares goodness-of-fit parameter S for all
  \_refine\_ls\_restrained\_S\_ definitions.
 
      {  sum { w [ Y(obs) - Y(calc) ]^2^ }  }^1/2^
- S = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012; }
+ S = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash; }
      {            Nref - Nparam            }
 
  Y(obs)  = the observed coefficients
@@ -7617,7 +7617,7 @@ The least-squares goodness-of-fit parameter S for
  \_refine\_ls\_restrained\_S\_ definitions.
 
      {  sum { w [ Y(obs) - Y(calc) ]^2^ }  }^1/2^
- S = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012; }
+ S = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash; }
      {            Nref - Nparam            }
 
  Y(obs)  = the observed coefficients
@@ -7642,7 +7642,7 @@ The least-squares goodness-of-fit parameter S for observed
  \_refine\_ls\_restrained\_S\_ definitions.
 
      {  sum { w [ Y(obs) - Y(calc) ]^2^ }  }^1/2^
- S = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012; }
+ S = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash; }
      {            Nref - Nparam            }
 
  Y(obs)  = the observed coefficients
@@ -7667,7 +7667,7 @@ The least-squares goodness-of-fit parameter S for all
  \_refine\_ls\_restrained\_S\_ definitions.
 
      {  sum | w | Y(obs) - Y(calc) |^2^ |  }^1/2^
- S = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012; }
+ S = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash; }
      {            Nref - Nparam            }
 
  Y(obs)  = the observed coefficients
@@ -7856,7 +7856,7 @@ The least-squares goodness-of-fit parameter S&#39; for all
 
       {sum { w [ Y(obs) - Y(calc) ]^2^ }                   }^1/2^
       {         + sum~r~ { w~r~ [ P(calc) - P(targ) ]^2^ } }
- S&#39; = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012; }
+ S&#39; = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash; }
       {            N~ref~ + N~restr~ - N~param~            }
 
  Y(obs)   = the observed coefficients
@@ -7891,7 +7891,7 @@ The least-squares goodness-of-fit parameter S&#39; for
 
       {sum { w [ Y(obs) - Y(calc) ]^2^ }                   }^1/2^
       {         + sum~r~ { w~r~ [ P(calc) - P(targ) ]^2^ } }
- S&#39; = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012; }
+ S&#39; = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash; }
       {            N~ref~ + N~restr~ - N~param~            }
 
  Y(obs)   = the observed coefficients
@@ -7925,7 +7925,7 @@ The least-squares goodness-of-fit parameter S&#39; for observed
 
       {sum { w [ Y(obs) - Y(calc) ]^2^ }                   }^1/2^
       {         + sum~r~ { w~r~ [ P(calc) - P(targ) ]^2^ } }
- S&#39; = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012; }
+ S&#39; = { &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash; }
       {            N~ref~ + N~restr~ - N~param~            }
 
  Y(obs)   = the observed coefficients
@@ -8430,7 +8430,7 @@ Values:
  does not exceed
    _reflns_threshold_expression</td></tr>
   <tr><td>-</td><td>systematically absent reflection</td></tr>
-  <tr><td>x</td><td>unreliable measurement &#x2012; not used</td></tr>
+  <tr><td>x</td><td>unreliable measurement &ndash; not used</td></tr>
   <tr><td>h</td><td>does not satisfy _refine_ls_d_res_high</td></tr>
   <tr><td>l</td><td>does not satisfy _refine_ls_d_res_low</td></tr>
 </table>
@@ -8496,7 +8496,7 @@ Values:
  satisfies _refine_ls_d_res_low
  unobserved by _reflns_observed_criterion</td></tr>
   <tr><td>-</td><td>systematically absent reflection</td></tr>
-  <tr><td>x</td><td>unreliable measurement &#x2012; not used</td></tr>
+  <tr><td>x</td><td>unreliable measurement &ndash; not used</td></tr>
   <tr><td>h</td><td>does not satisfy _refine_ls_d_res_high</td></tr>
   <tr><td>l</td><td>does not satisfy _refine_ls_d_res_low</td></tr>
 </table>
@@ -9094,7 +9094,7 @@ The percentage of geometrically possible reflections
 The value of Rmerge(F) for all reflections in a given shell.
 
              sum~i~ ( sum~j~ | F~j~ - &lt;F&gt; | )
- Rmerge(F) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012;
+ Rmerge(F) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;
                  sum~i~ ( sum~j~ &lt;F&gt; )
 
  F~j~  = the amplitude of the jth observation of reflection i
@@ -9110,7 +9110,7 @@ The value of Rmerge(F) for significantly intense reflections
  (see [\_reflns\_threshold\_expression](#_reflns_threshold_expression)) in a given shell.
 
              sum~i~ ( sum~j~ | F~j~ - &lt;F&gt; | )
- Rmerge(F) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012;
+ Rmerge(F) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;
                  sum~i~ ( sum~j~ &lt;F&gt; )
 
  F~j~  = the amplitude of the jth observation of reflection i
@@ -9126,7 +9126,7 @@ The value of Rmerge(F) for reflections classified as &#39;observed&#39;
  (see [\_reflns\_observed\_criterion](#_reflns_observed_criterion)) in a given shell.
 
              sum~i~ ( sum~j~ | F~j~ - &lt;F&gt; | )
- Rmerge(F) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012;
+ Rmerge(F) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;
                  sum~i~ ( sum~j~ &lt;F&gt; )
 
  F~j~  = the amplitude of the jth observation of reflection i
@@ -9141,7 +9141,7 @@ The value of Rmerge(F) for reflections classified as &#39;observed&#39;
 The value of Rmerge(I) for all reflections in a given shell.
 
              sum~i~ ( sum~j~ | I~j~ - &lt;I&gt; | )
- Rmerge(I) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012;
+ Rmerge(I) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;
                  sum~i~ ( sum~j~ &lt;I&gt; )
 
  I~j~  = the intensity of the jth observation of reflection i
@@ -9157,7 +9157,7 @@ The value of Rmerge(I) for significantly intense reflections
  (see [\_reflns\_threshold\_expression](#_reflns_threshold_expression)) in a given shell.
 
              sum~i~ ( sum~j~ | I~j~ - &lt;I&gt; | )
- Rmerge(I) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012;
+ Rmerge(I) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;
                  sum~i~ ( sum~j~ &lt;I&gt; )
 
  I~j~  = the intensity of the jth observation of reflection i
@@ -9173,7 +9173,7 @@ The value of Rmerge(I) for reflections classified as &#39;observed&#39;
  (see [\_reflns\_observed\_criterion](#_reflns_observed_criterion)) in a given shell.
 
              sum~i~ ( sum~j~ | I~j~ - &lt;I&gt; | )
- Rmerge(I) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&#x2012;
+ Rmerge(I) = &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;
                  sum~i~ ( sum~j~ &lt;I&gt; )
 
  I~j~  = the intensity of the jth observation of reflection i
