@@ -24,7 +24,9 @@ cod-tools (unreleased)
     - COD::CIF::Unicode2CIF:
       - mapped the capital sharp S ('ẞ') to the '\&S' CIF special code;
       - mapped the CIF special code for a delocalized double bond ('\\dbb ')
-        to the '⎓' Unicode symbol.
+        to the '⎓' Unicode symbol;
+      - changed the main Unicode symbol that maps to the CIF special code
+        for a dash ('--') from a figure dash ('‒') to an en dash ('–').
   * Deprecated:
     - COD::ToolsVersion
       - the $COD::ToolsVersion::Version package variable.
